# BreweryApps

./: README.md
BeerColour2/: BeerColour2App.swift  BeerEBCAnalyzer.swift  CameraView.swift  ContentView.swift
BeerColour2Tests/: BeerColour2Tests.swift
BeerColour2UITests/: BeerColour2UITests.swift  BeerColour2UITestsLaunchTests.swift
BeerColourEBC.xcodeproj/: project.pbxproj
BeerColourEBC.xcodeproj/project.xcworkspace/xcuserdata/klambert.xcuserdatad/: UserInterfaceState.xcuserstate
BeerColourEBC.xcodeproj/xcuserdata/klambert.xcuserdatad/xcschemes/: xcschememanagement.plist
BeerColourWebApp/: Cargo.toml  README.md  index.html  package.json
BeerColourWebApp/src/: lib.rs
