[package]
name = "beer-ebc-detector"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[profile.release]
opt-level = "s"